Shang New Live/src/objects/Equipment_Service_Contract__c.object
<CustomObject>
    <fields>
        <fullName>Checklist_Id__c</fullName>
        <formula>FM_Service_Contract__r.Checklist_Master__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Checklist Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department in Charge</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Department</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department_in_Charge__c</fullName>
        <label>Department in Charge</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Department</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Equipment</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>Equipment Service Contracts</relationshipLabel>
        <relationshipName>Equipment_Service_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FM_Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FM Service Contract</label>
        <referenceTo>FM_Service_Contract__c</referenceTo>
        <relationshipLabel>Equipment Service Contracts</relationshipLabel>
        <relationshipName>Equipment_Service_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Frequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Generate_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <label>Job Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Job_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Id__c</fullName>
        <formula>FM_Service_Contract__r.Property__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property_Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Short_Code__c</fullName>
        <formula>FM_Service_Contract__r.Property__r.Short_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Short Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Start_Date__c</fullName>
        <label>Request Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Equipment</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Equipment Service Contract</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Property_Short_Code__c</columns>
        <columns>Equipment__c</columns>
        <columns>Request_Start_Date__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Frequency__c</columns>
        <columns>Department__c</columns>
        <columns>Job_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AnnuallyServiceContract</fullName>
        <columns>NAME</columns>
        <columns>Property_Short_Code__c</columns>
        <columns>Equipment__c</columns>
        <columns>Request_Start_Date__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Frequency__c</columns>
        <columns>Create_Request__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Frequency__c</field>
            <operation>equals</operation>
            <value>Annually</value>
        </filters>
        <label>Annually Service Contract</label>
    </listViews>
    <listViews>
        <fullName>BimonthlyServiceContract</fullName>
        <columns>NAME</columns>
        <columns>Property_Short_Code__c</columns>
        <columns>Equipment__c</columns>
        <columns>Request_Start_Date__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Frequency__c</columns>
        <columns>Create_Request__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Frequency__c</field>
            <operation>equals</operation>
            <value>Bimonthly</value>
        </filters>
        <label>Bimonthly Service Contract</label>
    </listViews>
    <listViews>
        <fullName>DailyServiceContract</fullName>
        <columns>NAME</columns>
        <columns>Property_Short_Code__c</columns>
        <columns>Equipment__c</columns>
        <columns>Request_Start_Date__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Frequency__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Frequency__c</field>
            <operation>equals</operation>
            <value>Daily</value>
        </filters>
        <label>Daily Service Contract</label>
    </listViews>
    <listViews>
        <fullName>FortnightlyServiceContract</fullName>
        <columns>NAME</columns>
        <columns>Property_Short_Code__c</columns>
        <columns>Equipment__c</columns>
        <columns>Request_Start_Date__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Frequency__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Frequency__c</field>
            <operation>equals</operation>
            <value>Fortnightly</value>
        </filters>
        <label>Fortnightly Service Contract</label>
    </listViews>
    <listViews>
        <fullName>MonthlyServiceContract</fullName>
        <columns>NAME</columns>
        <columns>Property_Short_Code__c</columns>
        <columns>Equipment__c</columns>
        <columns>Request_Start_Date__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Frequency__c</columns>
        <columns>Create_Request__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Frequency__c</field>
            <operation>equals</operation>
            <value>Monthly</value>
        </filters>
        <label>Monthly Service Contract</label>
    </listViews>
    <listViews>
        <fullName>QuarterlyServiceContract</fullName>
        <columns>NAME</columns>
        <columns>Property_Short_Code__c</columns>
        <columns>Equipment__c</columns>
        <columns>Request_Start_Date__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Frequency__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Frequency__c</field>
            <operation>equals</operation>
            <value>Quarterly</value>
        </filters>
        <label>Quarterly Service Contract</label>
    </listViews>
    <listViews>
        <fullName>SemiannuallyServiceContract</fullName>
        <columns>NAME</columns>
        <columns>Property_Short_Code__c</columns>
        <columns>Equipment__c</columns>
        <columns>Request_Start_Date__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Frequency__c</columns>
        <columns>Create_Request__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Frequency__c</field>
            <operation>equals</operation>
            <value>Semiannually</value>
        </filters>
        <label>Semiannually Service Contract</label>
    </listViews>
    <listViews>
        <fullName>WeeklyServiceContract</fullName>
        <columns>NAME</columns>
        <columns>Property_Short_Code__c</columns>
        <columns>Equipment__c</columns>
        <columns>Request_Start_Date__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Frequency__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Frequency__c</field>
            <operation>equals</operation>
            <value>Weekly</value>
        </filters>
        <label>Weekly Service Contract</label>
    </listViews>
    <nameField>
        <label>Equipment Service Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Equipment Service Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>End_Date__c &lt; Request_Start_Date__c</errorConditionFormula>
        <errorMessage>End Date must greater than Request Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Request_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Request_Start_Date__c &lt; Start_Date__c</errorConditionFormula>
        <errorMessage>Request Start Date must be after Equipment Contract Start Date</errorMessage>
    </validationRules>
</CustomObject>